tests/neg/log.hs
module LogNegTest where

test :: Floating a => a
test = log 0
